# dropMath

./: .gitignore  CMakeLists.txt  README.md  dropMath.hpp  dropMathConfig.cmake
cmake/: dropMathConfig.cmake.in
examples/: Bezier.h  CMakeLists.txt  common.hpp  examples.cpp
include/: dropMath.hpp
test/: CMakeLists.txt  PowZ_tests.hpp  Vector2_tests.hpp  Vector3_tests.hpp  general_tests.hpp  line_box_tests.hpp  test.cpp
